<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by rafsanahmad on 7/10/21, 11:55 PM
  ~  * Copyright (c) 2021  rafsanahmad. All rights reserved.
  ~  * Last modified 7/10/21, 11:55 PM
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.loginregistration.register.RegisterFragment">

    <data>

        <variable
            name="viewModel"
            type="com.dev.loginregistration.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/full_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/full_name"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/full_name_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/full_name_text_field"
            style="@style/PlainTextStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:importantForAutofill="no"
            android:text="@={viewModel.inputFullName}"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_text" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_text_field" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewModel.inputUsername}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.inputPassword}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <com.rafsan.image_subtitlebuttonlib.ImageSubtitleButton
            android:id="@+id/submitButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:onClick="@{()->viewModel.registerUser()}"
            app:btn_backgroundColor="@color/light_blue"
            app:btn_borderColor="@color/white"
            app:btn_borderWidth="1dp"
            app:btn_cornerRadius="10dp"
            app:btn_image="@drawable/info_icon"
            app:btn_imageSize="40dp"
            app:btn_imageTint="@color/white"
            app:btn_imageVisible="true"
            app:btn_rippleColor="@color/purple_700"
            app:btn_title="@string/register"
            app:btn_titleColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>