...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

        <com.rafsan.image_subtitlebuttonlib.ImageSubtitleButton
            android:id="@+id/logoutBtn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:onClick="@{()->viewModel.logoutUser()}"
            app:btn_backgroundColor="@color/light_blue"
            app:btn_borderColor="@color/border_color"
...
