...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <com.rafsan.image_subtitlebuttonlib.ImageSubtitleButton
            android:id="@+id/loginBtn"
            style="?attr/button_style"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:onClick="@{()->viewModel.loginButton()}"
            app:btn_subtitle="@string/username_password"
...
